@@ -14,6 +14,10 @@ New in spot 2.8.5.dev (not yet released)
   - Some formulas with Boolean sub-formulas equivalent to true or
     false could be translated into automata with false labels.
 
+  - The HOA printer would incorrectly output the condition such
+    'Fin(1) & Inf(2) & Fin(0)' as 'Fin(0) | Fin(1) & Inf(2)'
+    due to a bug in the is_generalized_rabin() matching function.
+
 New in spot 2.8.5 (2020-01-04)
 
   Bugs fixed:
